Ran pusht_memory_baseline

--- a/diffusion_policy/config/train_diffusion_unet_ddim_pusht_memory_lowdim_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_ddim_pusht_memory_lowdim_workspace.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - task: pusht_memory_fixed_lowdim
+  - task: pusht_memory_lowdim
 
 name: train_diffusion_unet_ddim_pusht_memory_lowdim
 _target_: diffusion_policy.workspace.train_diffusion_unet_lowdim_workspace.TrainDiffusionUnetLowdimWorkspace
